general: fix svg too wide

--- a/themes/lantian/source/_assets/style.scss
+++ b/themes/lantian/source/_assets/style.scss
@@ -75,7 +75,7 @@ article {
             word-wrap: break-word;
             word-break: normal;
         }
-        img {
+        img, svg {
             max-width: 100%;
         }
         blockquote, pre {
